# cpp-internals-playground

./: .gitignore  CMakeLists.txt  README.md
examples/: heap_buffer_demo.cpp  simple_vector_demo.cpp  tracer_demo.cpp
include/cpp_playground/containers/vector/: simple_vector.hpp
include/cpp_playground/object_model/heap_buffer/: heap_buffer.hpp
include/cpp_playground/object_model/tracer/: tracer.hpp
